Make sure button text is black on mobile.

--- a/library_project/website/static/website/buttons.css
+++ b/library_project/website/static/website/buttons.css
@@ -34,6 +34,7 @@
 
 .textBox {
     text-align: center;
+    color: black;
 
     max-width: 300px;
 }
